log
Thu, Apr 17, 2025  9:14:51 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
eeef3b7
Thu, Apr 17, 2025  9:17:33 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
a6850e6
Thu, Apr 17, 2025  9:17:56 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
b2fdc13
Thu, Apr 17, 2025  9:18:18 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
ff39258
Thu, Apr 17, 2025  9:18:42 PM: 
Compilation failed
test.c:8:8: error: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Werror=attributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
cc1.exe: all warnings being treated as errors
b747e03
Thu, Apr 17, 2025  9:21:26 PM: 
 tests:  0|0
45d6d13
Thu, Apr 17, 2025  9:22:05 PM: 
b92b4b9
Thu, Apr 17, 2025  9:26:15 PM: 
b935f21
Thu, Apr 17, 2025  9:40:44 PM: 
 hashmap.c | 11 +++++++++--
 1 file changed, 9 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:5: error: 'map' undeclared (first use in this function)
   57 |     map->buckets = (Pair **) malloc(map->capacity * sizeof(Pair *));
      |     ^~~
hashmap.c:57:5: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
d8ffb41
Thu, Apr 17, 2025  9:41:17 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
Compilation failed
In file included from test.c:4:
hashmap.c: In function 'createMap':
hashmap.c:57:37: error: 'map' undeclared (first use in this function)
   57 |     aux->buckets = (Pair **) malloc(map->capacity * sizeof(Pair *));
      |                                     ^~~
hashmap.c:57:37: note: each undeclared identifier is reported only once for each function it appears in
test.c: At top level:
test.c:8:8: warning: '_strdup' redeclared without dllimport attribute: previous dllimport ignored [-Wattributes]
    8 | char * _strdup(const char * str) {
      |        ^~~~~~~
9b7cf7e
Thu, Apr 17, 2025  9:42:12 PM: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
8f4c14a
